Align shows correctly in the homepage

--- a/src/style.css
+++ b/src/style.css
@@ -39,12 +39,6 @@ body {
   justify-content: space-around;
 }
 
-.main-container {
-  display: flex;
-  justify-content: space-around;
-  margin: 20px;
-}
-
 .btn-1 {
   box-shadow: 4px 7px 4px 0 #000;
   border: 1px solid #000;
@@ -52,4 +46,8 @@ body {
 
 .btn-container {
   text-align: center;
+}
+
+li {
+  list-style-type: none;
 }
